--- a/color_notes/color_notes.tex
+++ b/color_notes/color_notes.tex
@@ -174,6 +174,8 @@
 \begin{document}
 \maketitle
 
+\% Started: 352.2024
+
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\eqnset}[1]{\left.\mbox{$#1$}\;\;\right\rbrace\class{postbrace}{ }}
@@ -212,6 +214,26 @@ a pleasure to read. For now I'm just aiming for educational.
 \hypertarget{questions-about-light-and-color-itself}{%
 \section{Questions about light and color
 itself}\label{questions-about-light-and-color-itself}}
+
+\hypertarget{what-is-color-physically}{%
+\subsection{What is color, physically?}\label{what-is-color-physically}}
+
+Every photon has a wavelength, traditionally denoted by \(\lambda\) and
+measured in nm (nanometers) in the context of color. This wavelength
+corresponds inversely with the photon's frequency, traditionally denoted
+by \(\nu\), and measured in hertz (\(1/s\)).
+
+For example, suppose we see light consisting entirely of photons with
+the wavelength \(\lambda = 700\)nm. This appears red to our eyes. The
+wavelength and frequency of a photon are related by the formula
+
+\[ c = \lambda \nu,\]
+
+where \(c = 3\times 10^8 m/s\) is the speed of light.
+
+\hypertarget{my-notes-on-questions-for-this-section}{%
+\subsection{MY NOTES ON QUESTIONS FOR THIS
+SECTION}\label{my-notes-on-questions-for-this-section}}
 
 \begin{itemize}
 \tightlist
